package com.mis.system.service;

import com.mis.common.core.exception.BusinessException;
import com.mis.common.core.exception.ResultCode;
import com.mis.system.domain.entity.MenuType;
import com.mis.system.domain.entity.SysApi;
import com.mis.system.domain.entity.SysMenu;
import com.mis.system.domain.entity.SysMenuApi;
import com.mis.system.domain.repository.MenuApiBindingRow;
import com.mis.system.domain.repository.MenuApiRow;
import com.mis.system.domain.repository.SysApiRepository;
import com.mis.system.domain.repository.SysMenuApiRepository;
import com.mis.system.domain.repository.SysMenuRepository;
import com.mis.system.dto.MenuApiBindingItem;
import com.mis.system.dto.MenuApiReplaceRequest;
import com.mis.system.dto.MenuCreateRequest;
import com.mis.system.dto.MenuUpdateRequest;
import com.mis.system.dto.MenuVO;
import com.mis.system.support.IdGenerator;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;
import org.springframework.util.StringUtils;

import java.time.Instant;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.Comparator;
import java.util.HashMap;
import java.util.HashSet;
import java.util.List;
import java.util.Map;
import java.util.Set;
import java.util.stream.Collectors;

@Service
public class MenuService {

    private final SysMenuRepository menuRepository;
    private final SysMenuApiRepository menuApiRepository;
    private final SysApiRepository sysApiRepository;

    public MenuService(SysMenuRepository menuRepository,
                       SysMenuApiRepository menuApiRepository,
                       SysApiRepository sysApiRepository) {
        this.menuRepository = menuRepository;
        this.menuApiRepository = menuApiRepository;
        this.sysApiRepository = sysApiRepository;
    }

    @Transactional(readOnly = true)
    public List<MenuVO> tree(Long appId) {
        List<SysMenu> menus = menuRepository.findByAppIdOrderBySortAscCodeAsc(appId);
        Map<Long, List<MenuVO.MenuApiItem>> apiMap = loadApiMap(
                menus.stream().map(SysMenu::getId).collect(Collectors.toList()));
        return buildTree(menus, apiMap);
    }

    /**
     * 动态路由：仅返回授权菜单及其祖先目录（visible=1, status=1, type=1|2）。
     */
    @Transactional(readOnly = true)
    public List<MenuVO> router(Long appId, List<Long> allowedMenuIds) {
        if (allowedMenuIds == null || allowedMenuIds.isEmpty()) {
            return List.of();
        }
        Map<Long, SysMenu> allById = menuRepository.findByAppIdAndStatusOrderBySortAscCodeAsc(appId, 1).stream()
                .collect(Collectors.toMap(SysMenu::getId, m -> m, (a, b) -> a));
        Set<Long> include = new HashSet<>();
        for (Long id : allowedMenuIds) {
            SysMenu current = allById.get(id);
            while (current != null) {
                include.add(current.getId());
                if (current.getParentId() == null || current.getParentId() == 0L) {
                    break;
                }
                current = allById.get(current.getParentId());
            }
        }
        List<SysMenu> filtered = allById.values().stream()
                .filter(m -> include.contains(m.getId()))
                .filter(m -> !MenuType.BUTTON.equals(m.getType()))
                .filter(m -> m.getVisible() == null || m.getVisible() == 1)
                .sorted(Comparator.comparing(SysMenu::getSort).thenComparing(SysMenu::getCode))
                .toList();
        return buildTree(filtered, Map.of());
    }

    @Transactional(readOnly = true)
    public List<String> permissionCodes(List<Long> menuIds) {
        if (menuIds == null || menuIds.isEmpty()) {
            return List.of();
        }
        return menuRepository.findByIdInAndStatus(menuIds, 1).stream()
                .map(SysMenu::getPermission)
                .filter(StringUtils::hasText)
                .distinct()
                .toList();
    }

    @Transactional(readOnly = true)
    public MenuVO getById(Long id) {
        return toVo(require(id), List.of(), Map.of());
    }

    @Transactional
    public MenuVO create(MenuCreateRequest request) {
        String code = nextChildCode(request.appId(), request.parentId());
        if (StringUtils.hasText(request.permission())
                && menuRepository.existsByAppIdAndPermissionAndStatus(request.appId(), request.permission(), 1)) {
            throw new BusinessException(ResultCode.VALIDATION_ERROR, "permission 已存在");
        }
        Instant now = Instant.now();
        SysMenu menu = new SysMenu();
        menu.setId(IdGenerator.nextId());
        menu.setTenantId(request.tenantId());
        menu.setAppId(request.appId());
        menu.setParentId(request.parentId());
        menu.setCode(code);
        menu.setName(request.name());
        menu.setType(MenuType.of(request.type()));
        menu.setPath(request.path());
        menu.setComponent(request.component());
        menu.setPermission(request.permission());
        menu.setIcon(request.icon());
        menu.setSort(request.sort() != null ? request.sort() : 0);
        menu.setVisible(request.visible() != null ? request.visible() : 1);
        menu.setStatus(1);
        menu.setCreatedAt(now);
        menu.setUpdatedAt(now);
        menuRepository.save(menu);
        return toVo(menu, List.of(), Map.of());
    }

    @Transactional
    public MenuVO update(Long id, MenuUpdateRequest request) {
        SysMenu menu = require(id);
        menu.setName(request.name());
        if (request.path() != null) {
            menu.setPath(request.path());
        }
        if (request.component() != null) {
            menu.setComponent(request.component());
        }
        if (request.permission() != null) {
            menu.setPermission(request.permission());
        }
        if (request.icon() != null) {
            menu.setIcon(request.icon());
        }
        if (request.sort() != null) {
            menu.setSort(request.sort());
        }
        if (request.visible() != null) {
            menu.setVisible(request.visible());
        }
        if (request.status() != null) {
            menu.setStatus(request.status());
        }
        menu.setUpdatedAt(Instant.now());
        menuRepository.save(menu);
        return toVo(menu, List.of(), Map.of());
    }

    @Transactional
    public void delete(Long id) {
        SysMenu menu = require(id);
        if (menuRepository.existsByParentIdAndStatus(id, 1)) {
            throw new BusinessException(ResultCode.FORBIDDEN, "存在子菜单，无法删除");
        }
        menu.setStatus(0);
        menu.setUpdatedAt(Instant.now());
        menuRepository.save(menu);
    }

    /**
     * 查询单个菜单已绑定的接口明细（绑定弹层回显）。
     *
     * @param menuId 菜单 id（必须存在且 status=1，软删菜单不可查询）
     */
    @Transactional(readOnly = true)
    public List<MenuApiBindingItem> listApis(Long menuId) {
        requireActive(menuId);
        return menuApiRepository.findApiItemsByMenuId(menuId).stream()
                .map(MenuService::toBindingItem)
                .toList();
    }

    /**
     * 全量替换某菜单的关联接口：先删除旧绑定，再按请求 apiIds 顺序写入 sort=1..n。
     *
     * <p>事务边界在本方法（{@code @Transactional}）：校验 → deleteByMenuId → saveAll
     * 任一失败整体回滚；空集合等价于清空绑定。</p>
     *
     * @param menuId  菜单 id（必须存在且 status=1）
     * @param request 全量替换请求，apiIds 顺序即 sort 顺序
     */
    @Transactional
    public void replaceApis(Long menuId, MenuApiReplaceRequest request) {
        requireActive(menuId);
        List<Long> apiIds = request.apiIds() == null ? List.of() : request.apiIds();
        List<Long> distinctApiIds = apiIds.stream().distinct().toList();
        if (!distinctApiIds.isEmpty()) {
            long found = sysApiRepository.findAllById(distinctApiIds).size();
            if (found != distinctApiIds.size()) {
                throw new BusinessException(ResultCode.VALIDATION_ERROR, "存在无效的接口 ID");
            }
        }
        menuApiRepository.deleteByMenuId(menuId);
        if (distinctApiIds.isEmpty()) {
            return;
        }
        Instant now = Instant.now();
        List<SysMenuApi> rows = new ArrayList<>(distinctApiIds.size());
        for (int i = 0; i < distinctApiIds.size(); i++) {
            SysMenuApi row = new SysMenuApi();
            row.setId(IdGenerator.nextId());
            row.setMenuId(menuId);
            row.setApiId(distinctApiIds.get(i));
            row.setSort(i + 1);
            row.setCreatedAt(now);
            rows.add(row);
        }
        menuApiRepository.saveAll(rows);
    }

    private static MenuApiBindingItem toBindingItem(MenuApiBindingRow row) {
        return new MenuApiBindingItem(
                String.valueOf(row.getApiId()),
                row.getName(),
                row.getMethod(),
                row.getPath());
    }

    private String nextChildCode(Long appId, Long parentId) {
        if (parentId == null || parentId == 0L) {
            List<SysMenu> roots = menuRepository.findByAppIdOrderBySortAscCodeAsc(appId).stream()
                    .filter(m -> m.getParentId() == null || m.getParentId() == 0L)
                    .toList();
            int next = roots.size() + 1;
            return String.format("%04d", next);
        }
        SysMenu parent = require(parentId);
        List<SysMenu> siblings = menuRepository.findByAppIdOrderBySortAscCodeAsc(appId).stream()
                .filter(m -> parentId.equals(m.getParentId()))
                .toList();
        int next = siblings.size() + 1;
        return parent.getCode() + String.format("%04d", next);
    }

    private SysMenu require(Long id) {
        return menuRepository.findById(id)
                .orElseThrow(() -> new BusinessException(ResultCode.NOT_FOUND, "菜单不存在"));
    }

    /**
     * 校验菜单存在且处于启用态（status=1）；软删（status=0）菜单视为不可操作。
     */
    private SysMenu requireActive(Long id) {
        SysMenu menu = require(id);
        if (menu.getStatus() == null || menu.getStatus() != 1) {
            throw new BusinessException(ResultCode.NOT_FOUND, "菜单不存在或已停用");
        }
        return menu;
    }

    private Map<Long, List<MenuVO.MenuApiItem>> loadApiMap(List<Long> menuIds) {
        if (menuIds.isEmpty()) {
            return Map.of();
        }
        Map<Long, List<MenuVO.MenuApiItem>> map = new HashMap<>();
        for (MenuApiRow row : menuApiRepository.findApisByMenuIds(menuIds)) {
            map.computeIfAbsent(row.getMenuId(), k -> new ArrayList<>())
                    .add(new MenuVO.MenuApiItem(
                            String.valueOf(row.getApiId()),
                            row.getMethod(),
                            row.getPath()));
        }
        return map;
    }

    private List<MenuVO> buildTree(List<SysMenu> menus, Map<Long, List<MenuVO.MenuApiItem>> apiMap) {
        Map<Long, List<SysMenu>> byParent = new HashMap<>();
        for (SysMenu menu : menus) {
            Long pid = menu.getParentId() == null ? 0L : menu.getParentId();
            byParent.computeIfAbsent(pid, k -> new ArrayList<>()).add(menu);
        }
        return buildChildren(0L, byParent, apiMap);
    }

    private List<MenuVO> buildChildren(Long parentId, Map<Long, List<SysMenu>> byParent,
                                       Map<Long, List<MenuVO.MenuApiItem>> apiMap) {
        List<SysMenu> children = byParent.getOrDefault(parentId, List.of());
        List<MenuVO> result = new ArrayList<>(children.size());
        for (SysMenu menu : children) {
            result.add(toVo(menu, buildChildren(menu.getId(), byParent, apiMap), apiMap));
        }
        return result;
    }

    private MenuVO toVo(SysMenu menu, List<MenuVO> children, Map<Long, List<MenuVO.MenuApiItem>> apiMap) {
        return new MenuVO(
                String.valueOf(menu.getId()),
                String.valueOf(menu.getTenantId()),
                String.valueOf(menu.getAppId()),
                String.valueOf(menu.getParentId()),
                menu.getCode(),
                menu.getName(),
                menu.getType() != null ? menu.getType().getCode() : null,
                menu.getPath(),
                menu.getComponent(),
                menu.getPermission(),
                menu.getIcon(),
                menu.getSort(),
                menu.getVisible(),
                menu.getStatus(),
                children,
                apiMap.getOrDefault(menu.getId(), List.of()));
    }

    public static List<Long> parseIds(String ids) {
        if (!StringUtils.hasText(ids)) {
            return List.of();
        }
        return Arrays.stream(ids.split(","))
                .map(String::trim)
                .filter(s -> !s.isEmpty())
                .map(Long::valueOf)
                .toList();
    }
}
